--- a/assests/styleSheets/main.css
+++ b/assests/styleSheets/main.css
@@ -8,7 +8,7 @@ li {
 body {
     padding: 25px;
     background-attachment: fixed;
-    background-image: url(/assests/images/bg1.png);
+    background-image: url(./../images/bg1.png);
     background-repeat: repeat;
 }
 
@@ -301,7 +301,7 @@ img {
     height: 30%;
     align-self: center;
     /* background-color: whitesmoke; */
-    background-image: url(../images/logBg.jpg);
+    background-image: url(./../images/logBg.jpg);
     border: 4px double black;
     border-radius: 25px;
     display: flex;
@@ -383,7 +383,7 @@ img {
     height: 50%;
     align-self: center;
     /* background-color: whitesmoke; */
-    background-image: url(../images/regBG1.jpg);
+    background-image: url(./../images/regBG1.jpg);
     border: 4px double black;
     border-radius: 25px;
     display: flex;
